# game_1

./: CMakeLists.txt  main.cpp
Core/: Game.cpp  Game.h
Editor/: FileUtils.h  LayerState.h  MapManager.cpp  MapManager.h  MenuBar.cpp  MenuBar.h  ObjectDefinitionLibrary.cpp  ObjectDefinitionLibrary.h  TilesetManager.cpp  TilesetManager.h  Toolbar.cpp  Toolbar.h  UndoSystem.cpp  UndoSystem.h
Rendering/: Camera.h  TextRenderer.cpp  TextRenderer.h  TileRenderer.cpp  TileRenderer.h
World/: Map.cpp  Map.h  ObjectInstance.h  TileDefinition.h  TileLibrary.cpp  TileLibrary.h  TileSet.cpp  TileSet.h  WorldConfig.h
